# appkit

./: .dropboxignore  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Dockerfile  PERFORMANCE_IMPROVEMENTS.md  README.md  Taskfile.dist.yml  alembic.ini  conftest.py  gitleaks.toml  llms.txt  pyproject.toml  rxconfig.py  start.sh
components/appkit-assistant/: README.md  pyproject.toml
components/appkit-assistant/src/appkit_assistant/: configuration.py  roles.py
components/appkit-assistant/src/appkit_assistant/api/: __init__.py  file_cleanup_api.py
components/appkit-assistant/src/appkit_assistant/backend/: ai_model_registry.py  mcp_auth_service.py  model_manager.py  models.py  processor.py  repositories.py  response_accumulator.py  schemas.py  system_prompt_cache.py
components/appkit-assistant/src/appkit_assistant/components/: __init__.py  ai_model_dialogs.py  ai_model_table.py  command_palette.py  composer.py  composer_key_handler.py  file_manager.py  mcp_app_bridge.jsx  mcp_app_bridge.py  mcp_app_view.py  mcp_server_dialogs.py  mcp_server_table.py  message.py  openai_agent_dialogs.py  openai_agent_table.py  prompt_edit_modal.py  skill_dialogs.py  skill_table.py  system_prompt_editor.py  thread.py  threadlist.py  tools_modal.py  user_prompt_editor.py  user_skill_selector.py
components/appkit-assistant/src/appkit_assistant/logic/: response_accumulator.py
components/appkit-assistant/src/appkit_assistant/state/: ai_model_admin_state.py  file_manager_state.py  mcp_oauth_state.py  mcp_server_state.py  openai_agent_state.py  skill_admin_state.py  skill_state.py  system_prompt_state.py  thread_list_state.py  thread_state.py  user_prompt_state.py
components/appkit-assistant/tests/: conftest.py  test_ai_model_admin_state.py  test_ai_model_registry.py  test_citation_handler.py  test_claude_responses_processor.py  test_database_models.py  test_file_manager_service.py  test_file_manager_state.py  test_file_upload_service.py  test_file_upload_state.py  test_file_validation.py  test_gemini_responses_processor.py  test_mcp_apps_api.py  test_mcp_apps_mixin.py  test_mcp_apps_service.py  test_mcp_auth_service.py  test_mcp_mixin.py  test_mcp_oauth_state.py  test_mcp_server_state.py  test_mcp_token_service.py  test_message_converter.py  test_model_manager.py  test_model_selection.py  test_openai_client_service.py  test_openai_responses_processor.py  test_response_accumulator.py  test_skill_admin_state.py  test_skill_service.py  test_streaming_base.py  test_system_prompt_cache.py  test_thread_list_state.py  test_thread_mixins.py  test_thread_service.py  test_thread_state.py  test_user_prompt_service.py  test_user_prompt_state.py
components/appkit-commons/: pyproject.toml
components/appkit-commons/src/appkit_commons/: __init__.py  middleware.py  registry.py  roles.py  scheduler.py  testing.py
components/appkit-commons/tests/: conftest.py  test_base_repository.py  test_configuration_extended.py  test_database_entities.py  test_logging.py  test_openai_client_service.py  test_pgqueuer_comprehensive.py  test_roles.py  test_secret_provider.py  test_security.py  test_service_registry.py  test_session.py  test_session_manager.py
components/appkit-imagecreator/: README.md  pyproject.toml
components/appkit-imagecreator/src/appkit_imagecreator/: __init__.py  admin_state.py  configuration.py  gallery_page.py  gallery_state.py  pages.py  roles.py  state.py
components/appkit-imagecreator/tests/: conftest.py  test_admin_state.py  test_black_forest_labs.py  test_generated_image_repository.py  test_generator_model_repository.py  test_image_api.py  test_image_cleanup_service.py  test_image_models.py  test_imagecreator_state.py  test_nano_banana.py  test_openai_image_generator.py
components/appkit-mcp-bpmn/: README.md  pyproject.toml
components/appkit-mcp-bpmn/src/appkit_mcp_bpmn/: __init__.py  configuration.py  models.py  server.py
components/appkit-mcp-bpmn/tests/: conftest.py  test_bpmn_cleanup_service.py  test_bpmn_generator.py  test_bpmn_json_extractor.py  test_bpmn_lane_layout.py  test_bpmn_layouter.py  test_bpmn_repository.py  test_bpmn_storage.py  test_bpmn_storage_backends.py  test_bpmn_storage_database.py  test_bpmn_validator.py  test_bpmn_xml_builder.py  test_grid.py  test_repair_bpmn_json.py  test_server_tools.py
components/appkit-mcp-bpmn/tests/fixtures/: simple_process.bpmn
components/appkit-mcp-charts/: README.md  pyproject.toml
components/appkit-mcp-charts/src/appkit_mcp_charts/: __init__.py  server.py
components/appkit-mcp-charts/tests/: conftest.py  test_charts_server.py  test_visualize.py
components/appkit-mcp-commons/: README.md  pyproject.toml
components/appkit-mcp-commons/src/appkit_mcp_commons/: __init__.py  context.py  exceptions.py  models.py  utils.py
components/appkit-mcp-commons/tests/: test_context.py  test_exceptions.py  test_models.py  test_utils.py
components/appkit-mcp-image/: README.md  pyproject.toml
components/appkit-mcp-image/src/appkit_mcp_image/: __init__.py  auth.py  configuration.py  server.py
components/appkit-mcp-image/tests/: conftest.py  test_image_server.py
components/appkit-mcp-image/tests/backend/: test_image_loaders.py  test_image_processor.py  test_image_service.py  test_models.py  test_utils.py
components/appkit-mcp-image/tests/integration/: conftest.py  test_openai_integration.py
components/appkit-mcp-image/tests/server/: test_api_routes.py
components/appkit-mcp-user/: README.md  pyproject.toml
components/appkit-mcp-user/src/appkit_mcp_user/: __init__.py  configuration.py  models.py  server.py
components/appkit-mcp-user/tests/: conftest.py  test_auth_service.py  test_query_users.py  test_sql_generator.py  test_sql_validator.py  test_user_server.py
components/appkit-mcpapp/: README.md  pyproject.toml
components/appkit-mcpapp/src/appkit_mcpapp/: __init__.py  configuration.py  server.py
components/appkit-mcpapp/tests/: __init__.py  conftest.py  test_auth_service.py  test_chart_cache.py  test_query_users.py  test_sql_generator.py  test_sql_validator.py  test_visualize.py
(+553 files in other folders)
