[project]
name = "appkit"
version = "1.13.0"
description = "Production-ready Mantine UI components for Reflex - Demo Application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "appkit-assistant",
    "appkit-commons[apscheduler,pgqueuer,azure]",
    "appkit-imagecreator",
    "appkit-mantine",
    "appkit-mcp-bpmn",
    "appkit-mcp-charts",
    "appkit-mcp-image",
    "appkit-mcp-user",
    "appkit-ui",
    "appkit-user[azure,resend]",
    "psycopg==3.3.4",
    "psycopg-binary==3.3.4",
    "reflex[db]>=0.9.5",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "pytest-xdist==3.8.0",
    "pytest-timeout==2.4.0",
    "aiosqlite==0.22.1",
    "httpx==0.28.1",
    "responses==0.26.1",
    "faker==40.19.1",
    "ruff==0.15.14",
    "bump-my-version==1.3.0",
    "detect-secrets==1.5.0",
    "respx>=0.23.1",
]

[tool.setuptools.packages.find]
where = [
    "components/appkit-assistant/src",
    "components/appkit-commons/src",
    "components/appkit-imagecreator/src",
    "components/appkit-mantine/src",
    "components/appkit-mcp-bpmn/src",
    "components/appkit-mcp-charts/src",
    "components/appkit-mcp-commons/src",
    "components/appkit-mcp-image/src",
    "components/appkit-mcp-user/src",
    "components/appkit-ui/src",
    "components/appkit-user/src",
]

[tool.hatch.build.targets.wheel]
packages = [
    "app",
    "appkit_assistant",
    "appkit_commons",
    "appkit_imagecreator",
    "appkit_mantine",
    "appkit_mcp_bpmn",
    "appkit_mcp_charts",
    "appkit_mcp_commons",
    "appkit_mcp_image",
    "appkit_mcp_user",
    "appkit_ui",
    "appkit_user",
]

[tool.uv]
cache-dir = ".cache/uv_cache"

[tool.uv.workspace]
members = ["components/*"]
exclude = ["**/__pycache__"]

[tool.uv.sources]
appkit-assistant = { workspace = true }
appkit-commons = { workspace = true }
appkit-imagecreator = { workspace = true }
appkit-mantine = { workspace = true }
appkit-mcp-bpmn = { workspace = true }
appkit-mcp-charts = { workspace = true }
appkit-mcp-commons = { workspace = true }
appkit-mcp-image = { workspace = true }
appkit-mcp-user = { workspace = true }
appkit-ui = { workspace = true }
appkit-user = { workspace = true }

[tool.bumpversion]
commit = false
current_version = "1.13.0"
tag = false
allow-dirty = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "configuration/config.yaml"
search = 'version: {current_version}'
replace = 'version: {new_version}'

[[tool.bumpversion.files]]
filename = "components/appkit-assistant/pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "components/appkit-commons/pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "components/appkit-imagecreator/pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "components/appkit-mantine/pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "components/appkit-mcp-bpmn/pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "components/appkit-mcp-charts/pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "components/appkit-mcp-commons/pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "components/appkit-mcp-image/pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "components/appkit-mcp-user/pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "components/appkit-ui/pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "components/appkit-user/pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.ruff]
cache-dir = ".cache/ruff"
indent-width = 4
line-length = 88
target-version = "py312"
extend-exclude = [".cache", "docs", "infra", "prompts", "scripts", "static", "*.pyi"]

[tool.ruff.lint]
extend-select = ["I"]
ignore = [
    "EM101", # Exception must not use a string literal
    "EM102", # Exception must not use a string literal with a format specifier
    "ISC001", # Implicit string concatenation
    "N811", # Constant {name} imported as non-constant {asname}
    "N818", # Exception name {name} should be named with an Error suffix
    "PLR0913", # Too many arguments in function
    "PT011", # pytest-raises-too-broad
    "PT012", # pytest.raises() block should contain a single simple statement
    "RUF012", # Mutable class attributes should be annotated with typing.ClassVar
    "RUF100", # unused noqa
    "SIM300", # Yoda conditions are discouraged, use {suggestion} instead
]
select = [
    "A", # Flake8-builtins
    "ANN001",
    "ANN201", # Missing return type annotation
    "ARG", # Flake8-arguments
    "ASYNC", # Flake8-async
    "B", # Flake8-bugbear
    "C4", # Flake8-comprehensions
    "DTZ", # Flake8-datetimez
    "E", # Pyflakes
    "EM", # Flake8-errmsg
    "EXE", # Flake8-executable
    "F", # Pyflakes
    "FIX", # Flake8-fixme
    "FAST", # FastAPI
    "G", # Flake8-logging-format
    "ICN", # Flake8-import-conventions
    "LOG", # Flake8-logging
    "N", # Naming
    "PERF", # Perflint
    "PIE", # Flake8-pie
    "PL", # PyLint
    "PT", # Flake8-pytest-style
    "PTH", # Flake8-use-pathlib
    "PYI", # Flake8-pyi
    "Q", # Flake8-quotes
    "RET", # Flake8-return
    "RUF", # Ruff
    "S", # Flake8-bandit
    "SIM", # Flake8-simplify
    "SLF", # Flake8-self
    "SLF001", # Flake8-self
    "T20", # Flake8-print
    "TID", # Flake8-tidy-imports
    "UP", # PyUpgrade - will show hints for deprecated syntax in python 3.11
    "W", # pycodestyle
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I001"] # {name} imported but unused
"server.py" = ["W605", "S104"] # invalid escape sequence
"test_**.py" = ["S101", "PLR2004", "ANN001", "S106", "SLF001", "ARG001", "ARG002", "S105", "PLC0415"]
"conftest.py" = ["PLC0415"]
"alembic/versions/*.py" = ["E501"]
"indexer/main.py" = ["S104"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
exclude = ["*.pyi"]

[tool.ruff.lint.isort]
known-local-folder = ["app", "alembic"]
known-first-party = ["appkit_*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
cache_dir = ".cache/pytest"
norecursedirs = [".cache", "__pycache__", ".venv*", "node_modules"]
testpaths = [
    "components/appkit-commons/tests",
    "components/appkit-assistant/tests",
    "components/appkit-imagecreator/tests",
    "components/appkit-mcp-user/tests",
    "components/appkit-mcp-charts/tests",
    "components/appkit-mcp-bpmn/tests",
    "components/appkit-mcp-commons/tests",
    "components/appkit-mcp-image/tests",
    "components/appkit-user/tests",
]

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "C0103",
    "C0114",
    "C0115",
    "C0116",
    "C0301",
    "C0415",
    "W0621",
    "E0239",
    "E1101",
    "E1102",
    "E1120",
    "E1136",
    "W0718",
    "R0903",
    "W0611",
    "W0613",
    "W0622",
]

[tool.mypy]
cache_dir = ".cache/mypy"
disallow_untyped_defs = true
incremental = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_errors = false
ignore_missing_imports = false
# Components use src-layout PEP 420 namespace packages (no __init__.py), so mypy
# needs explicit package bases plus each src dir on the path to derive correct
# dotted module names. Without this, files like `types.py` are mistaken for the
# stdlib module they share a name with.
namespace_packages = true
explicit_package_bases = true
mypy_path = [
    ".",
    "components/appkit-assistant/src",
    "components/appkit-commons/src",
    "components/appkit-imagecreator/src",
    "components/appkit-mantine/src",
    "components/appkit-mcp-bpmn/src",
    "components/appkit-mcp-charts/src",
    "components/appkit-mcp-commons/src",
    "components/appkit-mcp-image/src",
    "components/appkit-mcp-user/src",
    "components/appkit-ui/src",
    "components/appkit-user/src",
]
files = [
    # Incremental mypy rollout — checking these modules first, expanding later.
    "components/appkit-commons/src",
    "components/appkit-mantine/src",
    "components/appkit-user/src",
]
follow_imports = "silent"
exclude = [
    ".cache",
    ".venv",
    ".venv.mac",
    ".venv_mac",
    ".web",
    ".github",
    ".devcontainer",
    ".idea",
    ".vscode",
    "build",
    "dist",
    "docs",
    "infra",
    "prompts",
    "scripts",
    "static",
    "uploads",
    "/tests/",
    "\\.pyi$",
]

# Third-party dependencies that ship no type stubs / py.typed marker. Ignoring
# missing imports here keeps `ignore_missing_imports = false` strict everywhere
# else so our own untyped imports still surface.
[[tool.mypy.overrides]]
module = [
    "pgqueuer.*",
    "apscheduler.*",
    "openai.*",
    "azure.*",
    "requests_oauthlib.*",
    "sqlalchemy_utils.*",
    # Reflex lazily aliases this from the separate `reflex_components_sonner`
    # distribution at runtime; the mapping isn't statically resolvable.
    "reflex.components.sonner.*",
]
ignore_missing_imports = true

# appkit_mantine is a Reflex component-wrapper library. Its component classes are
# written in Reflex's prop DSL — `prop: Var[T] = default` declarations and
# `EventHandler[...]` / `get_event_triggers` overrides — which mypy's strict mode
# cannot model (it reads the defaults as type-mismatched assignments). These error
# codes are pure framework noise here; real issues still surface under other codes.
[[tool.mypy.overrides]]
module = ["appkit_mantine.*"]
disable_error_code = [
    "assignment",
    "type-arg",
    "valid-type",
    "override",
    "operator",
    # Reflex component factories (rx.box, rx.button, super().create) return Any.
    "no-any-return",
]

# appkit_ui is not in the gated `files` set; it is only reached as a followed
# import from gated packages (e.g. appkit_user). mypy resolves a followed module
# to its generated `.pyi` stub (preferred over `.py`) — and the regex `exclude`
# only applies to crawled directories, not followed imports. The generated stubs
# carry Reflex's framework-noise codes (untyped `*children`/`**props`, Enum/list
# `__hash__` conflicts, reflex internals lacking py.typed). Silence those codes so
# the gate stays green; the `.py` sources remain the source of truth.
[[tool.mypy.overrides]]
module = ["appkit_ui.*"]
disable_error_code = [
    "no-untyped-def",
    "import-untyped",
    "misc",
    "name-defined",
]

# Reflex UI layer (component/page/template builders). These read state Vars and
# wire event handlers, which mypy can't model: `State.user.name` on an optional
# Var (union-attr), Var methods like `.contains()` / namespace sub-components like
# `mn.table.tr` (attr-defined), Var boolean operators (operator), `EventHandler`
# vs `Callable` (arg-type/call-arg/list-item), and `Any`-returning factories
# (no-any-return). Other codes stay active so real issues here still surface.
[[tool.mypy.overrides]]
module = [
    "appkit_user.*.components.*",
    "appkit_user.*.pages",
    "appkit_user.authentication.templates",
]
disable_error_code = [
    "union-attr",
    "attr-defined",
    "operator",
    "arg-type",
    "call-arg",
    "list-item",
    "no-any-return",
]

[tool.coverage.run]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    # Reflex UI component rendering — not unit-testable
    "*/appkit_assistant/components/*.py",
    "*/appkit_imagecreator/components/*.py",
    "*/appkit_mantine/*.py",
    "*/appkit_ui/components/*.py",
    "*/appkit_user/authentication/components/*.py",
    "*/appkit_user/authentication/templates/*.py",
    "*/appkit_user/user_management/components/*.py",
    # Route definitions & role constants
    "*/pages.py",
    "*/roles.py",
    "*/styles.py",
    "*/app.py",
]
source = [
    "components/appkit-commons/src/appkit_commons",
    "components/appkit-user/src/appkit_user",
    "components/appkit-imagecreator/src/appkit_imagecreator",
    "components/appkit-assistant/src/appkit_assistant",
]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:", "if __name__ == .__main__.:", "pragma: no cover"]
fail_under = 80
show_missing = true
skip_covered = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
