[project]
dependencies = [
    "anthropic>=0.84.0",
    "appkit-commons",
    "appkit-mantine",
    "appkit-ui",
    "appkit-user",
    "google-genai>=1.65.0",
    "mcp>=1.26.0",
    "openai>=2.24.0",
    "reflex>=0.8.27",
    "python-multipart>=0.0.22",
]
name = "appkit-assistant"
version = "1.8.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Jens Rehpöhler" }]
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = [
    "reflex",
    "mantine",
    "ui",
    "components",
    "web",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]

[project.urls]
Homepage = "https://github.com/jenreh/appkit"
Documentation = "https://github.com/jenreh/appkit/tree/main/docs"
Repository = "https://github.com/jenreh/appkit"
Issues = "https://github.com/jenreh/appkit/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".cache", "__pycache__"]

[tool.coverage.run]
branch = true
source = ["src/appkit_assistant"]
omit = [
    "*/tests/*",
    "*/components/*.py",
    "pages.py",
    "roles.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/appkit_assistant"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
