[project]
name = "appkit-commons"
version = "1.8.6"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Jens Rehpöhler" }]
requires-python = ">=3.13"
keywords = [
    "reflex",
    "mantine",
    "ui",
    "components",
    "web",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "colorlog>=6.10.1",
    "cryptography>=46.0.5",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "sqlalchemy-utils>=0.42.1",
    "sqlalchemy>=2.0.47",
    "starlette>=0.52.1",
]

[project.optional-dependencies]
apscheduler = [
    "apscheduler[psycopg]>=4.0.0a5",
]
pgqueuer = [
    "pgqueuer>=0.25.3",
]
azure = [
    "azure-identity>=1.25.2",
    "azure-keyvault-secrets>=4.10.0",
]

[project.urls]
Homepage = "https://github.com/jenreh/appkit"
Documentation = "https://github.com/jenreh/appkit/tree/main/docs"
Repository = "https://github.com/jenreh/appkit"
Issues = "https://github.com/jenreh/appkit/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".cache", "__pycache__"]

[tool.coverage.run]
branch = true
source = ["src/appkit_commons"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/appkit_commons"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
