[project]
name = "appkit-imagecreator"
version = "1.13.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Jens Rehpöhler" }]
requires-python = ">=3.13"
keywords = [
    "reflex",
    "mantine",
    "ui",
    "components",
    "web",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "appkit-commons",
    "fastapi>=0.136.1",
    "google-genai>=2.10.0",
    "httpx>=0.28.1",
    "openai>=2.37.0",
    "pillow>=12.2.0",
    "reflex>=0.9.5",
    "pyasn1>=0.6.3",
]

[project.urls]
Homepage = "https://github.com/jenreh/appkit"
Documentation = "https://github.com/jenreh/appkit/tree/main/docs"
Repository = "https://github.com/jenreh/appkit"
Issues = "https://github.com/jenreh/appkit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
appkit-commons = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".cache", "__pycache__"]

[tool.coverage.run]
branch = true
source = ["src/appkit_imagecreator"]
omit = [
    "*/tests/*",
    "*/components/*.py",
    "pages.py",
    "roles.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.hatch.build.targets.wheel]
packages = ["src/appkit_imagecreator"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
