[project]
dependencies = [
    "appkit-commons",
    "appkit-mcp-commons",
    "lxml>=6.1.0",
    "openai>=2.33.0",
]
name = "appkit-mcp-bpmn"
version = "1.9.1"
description = "MCP BPMN 2.0 Diagram Server"
readme = "README.md"
authors = [{ name = "Jens Rehpöhler" }]
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = [
    "reflex",
    "mcp",
    "fastmcp",
    "bpmn",
    "workflow",
    "diagram",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/jenreh/appkit"
Documentation = "https://github.com/jenreh/appkit/tree/main/docs"
Repository = "https://github.com/jenreh/appkit"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".cache", "__pycache__"]

[tool.coverage.run]
branch = true
source = ["src/appkit_mcp_bpmn"]
fail_under = 80

[tool.setuptools.packages.find]
where = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/appkit_mcp_bpmn"]
artifacts = ["src/appkit_mcp_bpmn/resources/SKILL.md"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
