[project]
dependencies = [
    "appkit-commons",
    "appkit-mcp-commons",
]
name = "appkit-mcp-image"
version = "1.6.3"
description = "MCP Image Processing Server"
readme = "README.md"
authors = [{ name = "Jens Rehpöhler" }]
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = [
    "reflex",
    "mcp",
    "fastmcp",
    "image",
    "processing",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/jenreh/appkit"
Documentation = "https://github.com/jenreh/appkit/tree/main/docs"
Repository = "https://github.com/jenreh/appkit"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = [".cache", "__pycache__"]

[tool.coverage.run]
branch = true
source = ["src/appkit_mcp_image"]
fail_under = 80

[tool.setuptools.packages.find]
where = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/appkit_mcp_image"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
