[project]
dependencies = [
    "appkit-commons",
    "appkit-mcp-commons",
    "appkit-user",
    "openai>=2.24.0",
    "sqlalchemy>=2.0.47",
]
name = "appkit-mcp-user"
version = "1.8.5"
description = "MCP User Analytics Server"
readme = "README.md"
authors = [{ name = "Jens Rehpöhler" }]
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = [
    "reflex",
    "mcp",
    "fastmcp",
    "analytics",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/jenreh/appkit"
Documentation = "https://github.com/jenreh/appkit/tree/main/docs"
Repository = "https://github.com/jenreh/appkit"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".cache", "__pycache__"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["src/appkit_mcp_user"]
fail_under = 80

[tool.setuptools.packages.find]
where = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/appkit_mcp_user"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
