[project]
dependencies = [
    "appkit-commons",
    "appkit-mantine",
    "fastmcp>=3.0.0",
]
name = "appkit-mcpapp"
version = "1.6.3"
description = "FastMCP 3.0-based MCP server component for appkit"
readme = "README.md"
authors = [{ name = "Jens Rehpöhler" }]
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = [
    "reflex",
    "mcp",
    "fastmcp",
    "server",
    "web",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]

[project.urls]
Homepage = "https://github.com/jenreh/appkit"
Documentation = "https://github.com/jenreh/appkit/tree/main/docs"
Repository = "https://github.com/jenreh/appkit"
Issues = "https://github.com/jenreh/appkit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/appkit_mcpapp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
